Revision history for HTTP-Roles

{{$NEXT}}

0.2.1  2022-05-28T22:34:12+02:00
    - Changed the name of the module to HTTP::Roles, not just in
      the META information.
    - Moved all roles into a single file, adapted the META accordingly.
    - Added HTTP::Roles as a use target.
    - Removed local, outdated copy of HTTP status codes, added
      dependency on HTTP::Status and use its .Map method.
    - First version in zef ecosystem.